--- a/qnap-collectd/collectd.conf.d/sample.conf
+++ b/qnap-collectd/collectd.conf.d/sample.conf
@@ -16,7 +16,7 @@ Interval 10
 LoadPlugin network
 
 <Plugin network>
-	Server "127.0.0.1" "25826"
+	Listen "0.0.0.0" "25826"
 </Plugin>
 
 ##########
